variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: type int
var step:int = 0
         ^Variables:2: error: not found: type int
var stepAmount:int = 0
               ^