variables.Variables.scala.code
var step:int = 0
var stepAmount:int = 0
while (! isOverBaggle) {forward();
                       step = step + 1}

pickupBaggle()

while (stepAmount != step) {backward();
                           stepAmount = stepAmount + 1}

dropBaggle()